app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 *= require_tree .
 *= require_self
 @import "font-awesome-sprockets";
 @import "font-awesome";
 */

html, body{
  padding: 0px !important;
  margin: 0px !important;
  font-family: 'Raleway', sans-serif !important;
  width: 100% !important;
  overflow-x: hidden !important; 
}

#title{
  float: left;
  margin-left: 50px;
  color: black;
  font-size: 30px;
  padding-top: 10px;
}

#title_footer{
  float: left;
  margin-left: 20px;
  color: black;
  font-size: 20px;
  margin-top: 5px; 
}

#navbar{
  height: 50px;
}

.footer{
  height: 35px;
  width: 100%;
  background-color: #f2f2f2; 
}

.directory{
  float: right;
  margin-right: 40px;
  padding-top: 20px;
}

.directory_foot{
  float: right;
  font-size: 3px;
  margin-right: 20px;
  padding-top: 10px;
}

a:link {
  text-decoration: none !important;
  font-size: 15px;
  color: black;
}

a:visited {
  text-decoration: none !important;
  font-size: 20px;
  color: black;
}

a:hover {
  text-decoration: none !important;
}

a:active {
  text-decoration: none !important;
}

.home_div{
  height: 600px;
  width: 100%;
  background-color: #262626 ;
}

.summary_div{
  height: 500px;
  background-color: white;
}

.who_we_are_div{
  height: 600px;
  background-color: #262626;
}

.what_do_we_do_div{
  height: 500px;
  background-color: white;
}

.our_mission_div{
  height: 400px;
  background-color: white;
}

.body_1{
  height: 500px;
  background-color: #f2f2f2;
}

.body_2{
  height: 500px;
  background-color: white;
}

.body_title{
  text-align: center;
  font-size: 64px;
  padding-top: 200px;
  color: white;
}

.body_text{
  text-align: center;
  font-size: 22px;
  margin-top: 15px;
  color: white;
}

.summary{
  float: left;
  width: 100%;
}

.fa{
  margin-left: 83px;
  color: #262626;
}

.sub_summary{
  float: left;
  margin-top: 70px;
  margin-left: 39px;
}

.summary_title{
  text-align: center;
  font-size: 23px;
  padding-top: 20px;
  margin-left: 40px;
  width: 200px;
  border-bottom: solid 1px;
}

.summary_text{
  text-align: center;
  font-size: 14px;
  margin-top: 30px;
  margin-left: 30px;
  width: 230px;
}

.wrapper{
  text-align: center;
}

.head_buttons{
  margin-top: 50px;
  height: 40px;
  width: 200px;
  font-size: 16px !important;
  margin-left: 30px;
  margin-right: 30px;
  border: 1px solid #666;
  text-decoration: none;
  color: white !important;
  background-color: #262626 !important;
}

.summary_buttons{
  margin-top: 25px;
  margin-left: 85px;
  font-size: 10px;
  border: 1px solid #666;
  text-decoration: none;
  color:#000;
  background-color: #dcdcdc;
}

#copyright{
  text-align: center;
  padding-top: 10px;
  margin-left: 350px;
}

.summary{
  width: 50px;
}

.who_we_are_title{
  margin-left: 190px;
  padding-top: 30px;
  color: #e6e6e6;
}

#who_under_border{
  border-bottom: solid 1px;
  width: 100px;
  margin-left: 250px;
  color: #e6e6e6;
}

.under_border{
  border-bottom: solid 1px;
  width: 100px;
  margin-left: 570px;
}

.who_we_are_body{
  background-color: #e6e6e6; 
  margin-top: 30px;
  margin-left: 20px;
  margin-right: 20px;
  padding: 20px;
  font-size: 17px;
  display: inline-block;
  float: left;
  border-radius: 10px;
}

.who_we_are_img{
  height: 500px;
  width: 550px;
  margin-top: 20px;
  margin-right: 20px;
  margin-left: 40px;
  display: inline-block;
  float: left;
}

.who_we_are_img2{
  height: 500px;
  width: 550px;
  margin-right: 20px;
  margin-left: 40px;
  display: inline-block;
  float: left;
}

#home_img1{
  height: 500px;
  width: 500px;
  border-radius: 100%;
  margin-left: 40px;
}

.advertise{
  height: 100px;
  background-color: #262626;
  text-align: center;
}

.advertext{
  color: white;
  float: left;
  margin-top: 38px;
  margin-left: 80px;
  font-size: 22px;
}

.advertise_button{
  float: right;
  margin-top: 30px;
  margin-right: 90px;
  height: 40px;
  width: 200px;
  border-radius: 50px;
  border: solid 1px !important;
  color: white !important;
  background-color: #262626 !important; 
}

#what_do_we_do_title{
  text-align: center;
  padding-top: 50px;
}

.what_do_we_do_text_div{
  width: 470px;
  margin-left: 400px;
  margin-top: 25px;
  padding: 10px;
}

.what_we_do_inner_div{
  height: 300px;
  width: 360px;
  float: left;
  display: inline-block;
  margin-left: 20px;
  margin-right: 20px;
  padding-top: 50px;
  padding-left: 30px;
}

.what_we_do_title{
  text-align: center;
  font-size: 23px;
}

.wwd_under_border{
  border-bottom: solid 1px;
  width: 100px;
  margin-left: 575px;
}

.what_we_do_under_border{
  border-bottom: solid 1px;
  width: 60px;
  margin-left: 130px;
}

.what_we_do_body{
  text-align: center;
  margin-top: 40px;
  font-size: 14px;
}

.what_do_we_do_text{
  font-size: 18px;
  line-height: 10px;
}

.what_do_we_do_text2{
  font-size: 18px;
  line-height: 10px;
  padding-left: 10px;
}

#our_creations_title{
  text-align: center;
  padding-top: 60px;
}

#our_mission_title{
  text-align: center;
  padding-top: 20px;

}

#our_mission_body{
  text-align: center;
  padding-top: 60px;
  width: 800px;
  margin-left: 225px;
  margin-right: 225px;
  font-size: 20px;
}

.om_under_border{
  border-bottom: solid 1px;
  width: 100px;
  margin-left: 580px;
}

.our_mission_button{
  margin-top: 30px;
  height: 40px;
  width: 200px;
  font-size: 16px !important;
  margin-left: 30px;
  margin-right: 30px;
  border: 1px solid #666;
  text-decoration: none;
  color: black !important;
}

#crew_header{
  height: 300px;
  background-color: #262626;
}

#crew_space{
  margin-bottom: 50px;
}

#crew_title{
  text-align: center;
  font-size: 60px;
  padding-top: 120px;
  color: white;
}

#crew_slogan{
  text-align: center;
  padding-top: 70px;
  font-size: 40px;
  font-weight: bold;
  padding-bottom: 10px;
}

#crew_para{
  text-align: center;
  padding-top: 20px;
  font-size: 19px;
}

.profile_div{
  width: 1200px;
  height: 500px;
  margin-top: 50px;
  margin-left: 80px;
  display: inline-block;
  margin-bottom: 100px;
}

.profile_pics{
  float: left;
  padding-right: 40px;
}

#scot_pic{
  height: 535px;
  width: 535px;
}

#justin_pic{
  height: 535px;
  width: 535px;
}

#name{
  text-align: center;
  color: black;
  padding-top: 20px;
  font-size: 20px;
  font-weight: bold;
}

#work_header{
  height: 300px;
  width: 100%;
  background-color: #262626; 
}

#work_title{
  text-align: center;
  font-size: 60px;
  padding-top: 120px;
  color: white;
}

#work_space{
  height: 600px;
  margin-bottom: 280px;
}

#work_top{
  font-size: 40px;
  padding-top: 70px;
  text-align: center; 
  font-weight: bold; 
}

#work_bot{
  text-align: center;
  padding-top: 20px;  
  margin-left: 100px;
  margin-right: 100px;
  font-size: 20px;
}

#puppy{
  height: 500px;
  width: 850px;
  margin-left: 210px;
  padding-top: 50px;
}

#contact_div{
  height: 300px;
  background-color: #262626; 
}

.contact_body{
  height: 670px;
  background-color: white;
  margin-top: 30px;
}

::-webkit-input-placeholder{
  color: grey;
  padding-left: 10px;
}

.new_contact{
  float: left;
  width: 500px;
  height: 456px;
  background-color: #262626; 
  border-radius: 10px;
}

#contact_title{
  text-align: center;
  font-size: 60px;
  padding-top: 120px;
  color: white;
}

#contact_wrapper{
  float: left;
  margin-left: 50px;
  margin-right: 50px;
  margin-top: 100px;
}

.hidden{
  display: none;
}

.contact_div{
  width: 200px;
  height: 50px;
  margin-top: 10px;
  padding-left: 50px;
  margin-bottom: 30px;
  font-size: 15px;
  display: inline-block;
}

.contact_input{
  width: 180px;
  height: 30px;
  margin-top: 20px;
  font-size: 15px;
  border: 0;
  border-radius: 5px;
}

#message{
  width: 385px;
  height: 100px;
  padding-left: 20px;
  margin-top: 30px;
  margin-bottom: 30px;
  font-size: 15px;
  border-radius: 5px;
  border: 0;
}

.submit_form{
  margin-left: 60px;
  margin-top: 10px;
}

#social_media{
  width: 500px;
  height: 456px;
  margin-left: 150px;
  display: inline-block;
  float: right;
  background-color: #262626; 
  border-radius: 10px;
}

#social_align{
  display: inline-block;
}

.social_icons:hover{
  color: #cccccc;
}

.social_icons{
  color: #f2f2f2;
  margin-left: 140px;
  padding-top: 60px;
  padding-bottom: 60px;
  text-shadow: 1px 1px 1px;
}

#contact_header{
  float: left;
  padding-top: 5px;
  margin-left: 50px;
  border-bottom: solid 1px;
  color: white;
}

#social_header{
  float: right;
  padding-top: 5px;
  margin-right: 160px;
  border-bottom: solid 1px;
  color: white;
}

#thankyou_head{
  padding-top: 200px;
  text-align: center;
  font-size: 50px; 
  font-weight: bold;
}

#thankyou_body{
  text-align: center;
  font-size: 20px;
}

